Had to get rid of zipcode functionality, but city weather is working